--- a/stylesheet/firebase-ui.css
+++ b/stylesheet/firebase-ui.css
@@ -297,17 +297,23 @@ input.firebaseui-input-invalid{
 }
 
 .firebaseui-idp-password,
-.firebaseui-idp-password:hover {
+.firebaseui-idp-password:hover,
+.mdl-button.firebaseui-idp-password:active,
+.mdl-button.firebaseui-idp-password:focus {
   background-color: #db4437;
 }
 
 .firebaseui-idp-phone,
-.firebaseui-idp-phone:hover {
+.firebaseui-idp-phone:hover,
+.mdl-button.firebaseui-idp-phone:active,
+.mdl-button.firebaseui-idp-phone:focus {
   background-color: #02bd7e;
 }
 
 .firebaseui-idp-google,
-.firebaseui-idp-google:hover {
+.firebaseui-idp-google:hover,
+.mdl-button.firebaseui-idp-google:active,
+.mdl-button.firebaseui-idp-google:focus {
   background-color: #ffffff;
 }
 
@@ -316,17 +322,23 @@ input.firebaseui-input-invalid{
 }
 
 .firebaseui-idp-github,
-.firebaseui-idp-github:hover {
+.firebaseui-idp-github:hover,
+.mdl-button.firebaseui-idp-github:active,
+.mdl-button.firebaseui-idp-github:focus {
   background-color: #333333;
 }
 
 .firebaseui-idp-facebook,
-.firebaseui-idp-facebook:hover {
+.firebaseui-idp-facebook:hover,
+.mdl-button.firebaseui-idp-facebook:active,
+.mdl-button.firebaseui-idp-facebook:focus {
   background-color: #3b5998;
 }
 
 .firebaseui-idp-twitter,
-.firebaseui-idp-twitter:hover {
+.firebaseui-idp-twitter:hover,
+.mdl-button.firebaseui-idp-twitter:active,
+.mdl-button.firebaseui-idp-twitter:focus {
   background-color: #55acee;
 }
 
