[firebase-release] Updated FirebaseUI for web to 2.4.0.
 - Removes hard coded QUOTA_EXCEEDED phone auth error. Instead we will use whatever the Auth API returns.
 - Updates the FirebaseUI demo app to install as a standalone PWA when added to home screen on an Android device.
 - Support prefilling the default phone number by passing a loginHint in the configuration only when phone auth provider is the only provider.
 - Support prefilling the default national number along with default country only when phone auth provider is the only provider.
 - Updates saucelabs tests: replace Safari 6 with 7 and removes IE9.
 - Remove autoescape="strict" attributes from Soy templates.
 - Uses session persistence when supported on the internal temporary auth instance to avoid dangling auth states.
 - Modified reCAPTCHA "I am not a Robot" button to be more responsive in narrow screens.
 - Adds a continue button to redirect to the continueUrl if available in the password reset and email verification action widgets.


PiperOrigin-RevId: 171213094
Change-Id: I72097a0e356f9748ffd2599b97484601e0a1bd28

--- a/stylesheet/firebase-ui.css
+++ b/stylesheet/firebase-ui.css
@@ -296,6 +296,16 @@ input.firebaseui-input-invalid{
   }
 }
 
+/* Resize reCAPTCHA container on narrow mobile devices. */
+@media (max-width: 320px) {
+  .firebaseui-recaptcha-container > div > div {
+    transform: scale(0.9);
+    -webkit-transform: scale(0.9);
+    transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+  }
+}
+
 .firebaseui-idp-password,
 .firebaseui-idp-password:hover,
 .mdl-button.firebaseui-idp-password:active,
