- Support `Continue as guest` and add new sign in provider `firebaseui.auth.AnonymousAuthProvider`. - Add the ability to configure country selection for phone Auth. - Add return type for `start()` and `setConfig()` in typescript declaration.
PiperOrigin-RevId: 205712709
Change-Id: Ie3d1a50be4fbd95b8ba02d1c6f500f553ff4ba60

--- a/stylesheet/firebase-ui.css
+++ b/stylesheet/firebase-ui.css
@@ -373,6 +373,13 @@ input.firebaseui-input-invalid{
   background-color: #55acee;
 }
 
+.firebaseui-idp-anonymous,
+.firebaseui-idp-anonymous:hover,
+.mdl-button.firebaseui-idp-anonymous:active,
+.mdl-button.firebaseui-idp-anonymous:focus {
+  background-color: #f4b400;
+}
+
 .firebaseui-info-bar {
   background-color: #f9edbe;
   border: 1px solid #f0c36d;
@@ -525,6 +532,10 @@ input.firebaseui-input-invalid{
 }
 
 .firebaseui-callback-indicator-container .firebaseui-busy-indicator {
+  top: 0px;
+}
+
+.firebaseui-page-provider-sign-in .firebaseui-busy-indicator {
   top: 0px;
 }
 
