- Removes callback flicker when there is no pending redirect. - Adds the ability to use spinners instead of progress bars. This is used only for the nascar screen. - Updates Readme for customizing country selector.
PiperOrigin-RevId: 207748692
Change-Id: Iaebc5cd3a514fb065e4c901dc00348755daf2bab

--- a/stylesheet/firebase-ui.css
+++ b/stylesheet/firebase-ui.css
@@ -523,7 +523,7 @@ input.firebaseui-input-invalid{
   margin-left: 114px;
 }
 
-.firebaseui-busy-indicator {
+.mdl-progress.firebaseui-busy-indicator {
   height: 2px;
   left: 0;
   position: absolute;
@@ -531,11 +531,17 @@ input.firebaseui-input-invalid{
   width: 100%;
 }
 
-.firebaseui-callback-indicator-container .firebaseui-busy-indicator {
-  top: 0px;
+.mdl-spinner.firebaseui-busy-indicator {
+  height: 56px;
+  left: 0px;
+  margin: auto;
+  position: absolute;
+  right: 0px;
+  top: 30%;
+  width: 56px;
 }
 
-.firebaseui-page-provider-sign-in .firebaseui-busy-indicator {
+.firebaseui-callback-indicator-container .firebaseui-busy-indicator {
   top: 0px;
 }
 
