--- a/stylesheet/firebase-ui.css
+++ b/stylesheet/firebase-ui.css
@@ -13,7 +13,7 @@
  */
 
 /**
- * CSS for FirebaseUI Javascript widget.
+ * CSS for FirebaseUI JavaScript widget.
  * All selectors should begin with a "firebaseui-" prefix to avoid conflicts.
  */
 .firebaseui-container {
