--- a/stylesheet/imports.css
+++ b/stylesheet/imports.css
@@ -13,7 +13,7 @@
  */
 
 /**
- * CSS imports for FirebaseUI Javascript widget.
+ * CSS imports for FirebaseUI JavaScript widget.
  */
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap);
