--- a/packages/styles/src/base.css
+++ b/packages/styles/src/base.css
@@ -26,6 +26,7 @@
   --color-error: var(--fui-error);
   --radius: var(--fui-radius);
   --radius-card: var(--fui-radius-card);
+
 }
 
 @layer theme {
@@ -117,7 +118,12 @@
     @apply bg-transparent text-text border border-input hover:bg-background hover:border-primary;
   }
 
-  .fui-provider__button > svg {
+  .fui-button.fui-provider__button {
+    @apply border border-border;
+  }
+
+  .fui-provider__button > svg,
+  .fui-provider__button > img {
     @apply w-5 h-5;
   }
 
@@ -163,5 +169,101 @@
 
   .fui-country-selector__dial-code {
     @apply absolute left-8 top-1/2 -translate-y-1/2 text-sm pointer-events-none text-text;
+  }
+
+  .fui-provider__button[data-provider="google.com"][data-themed="true"] {
+    --google-primary: #FFFFFF;
+    --color-primary: var(--google-primary);
+    --color-primary-hover: --alpha(var(--google-primary) / 85%);
+    --color-primary-surface: #1F1F1F;
+    --color-border: #747775;
+  }
+
+  .fui-provider__button[data-provider="google.com"][data-themed="neutral"] {
+    --google-primary: #F2F2F2;
+    --color-primary: var(--google-primary);
+    --color-primary-hover: --alpha(var(--google-primary) / 85%);
+    --color-primary-surface: #1F1F1F;
+    --color-border: transparent;
+  }
+
+  @variant dark {
+    .fui-provider__button[data-provider="google.com"][data-themed="true"] {
+      --google-primary: #131314;
+      --color-primary-surface: #E3E3E3;
+      --color-border: #8E918F;
+    }
+  }
+
+  .fui-provider__button[data-provider="facebook.com"][data-themed="true"] {
+    --facebook-primary: #1877F2;
+    --color-primary: var(--facebook-primary);
+    --color-primary-hover: --alpha(var(--facebook-primary) / 85%);
+    --color-primary-surface: var(--color-white);
+    --color-border: var(--facebook-primary);
+  }
+
+  .fui-provider__button[data-provider="apple.com"][data-themed="true"] {
+    --apple-primary: var(--color-white);
+    --color-primary: var(--apple-primary);
+    --color-primary-hover: --alpha(var(--apple-primary) / 85%);
+    --color-primary-surface: var(--color-black);
+    --color-border: var(--color-black);
+  }
+
+  @variant dark {
+    .fui-provider__button[data-provider="apple.com"][data-themed="true"] {
+      --apple-primary: var(--color-black);
+      --color-primary-surface: var(--color-white);
+      --color-border: var(--color-white);
+    }
+  }
+
+  .fui-provider__button[data-provider="github.com"][data-themed="true"] {
+    --github-primary: var(--color-white);
+    --color-primary: var(--github-primary);
+    --color-primary-hover: --alpha(var(--github-primary) / 85%);
+    --color-primary-surface: var(--color-black);
+    --color-border: var(--color-black);
+  }
+
+  @variant dark {
+    .fui-provider__button[data-provider="github.com"][data-themed="true"] {
+      --github-primary: var(--color-black);
+      --color-primary-surface: var(--color-white);
+      --color-border: var(--color-white);
+    }
+  }
+
+  .fui-provider__button[data-provider="microsoft.com"][data-themed="true"] {
+    --microsoft-primary: var(--color-white);
+    --color-primary: var(--microsoft-primary);
+    --color-primary-hover: --alpha(var(--microsoft-primary) / 85%);
+    --color-primary-surface: #5E5E5E;
+    --color-border: var(--color-black);
+  }
+
+  @variant dark {
+    .fui-provider__button[data-provider="microsoft.com"][data-themed="true"] {
+      --microsoft-primary: #2F2F2F;
+      --color-primary-surface: var(--color-white);
+      --color-border: var(--color-white);
+    }
+  }
+  
+  .fui-provider__button[data-provider="twitter.com"][data-themed="true"] {
+    --twitter-primary: var(--color-white);
+    --color-primary: var(--twitter-primary);
+    --color-primary-hover: --alpha(var(--twitter-primary) / 85%);
+    --color-primary-surface: var(--color-black);
+    --color-border: var(--color-black);
+  }
+
+  @variant dark {
+    .fui-provider__button[data-provider="twitter.com"][data-themed="true"] {
+      --twitter-primary: var(--color-black);
+      --color-primary-surface: var(--color-white);
+      --color-border: var(--color-white);
+    }
   }
 }
