--- a/packages/styles/src/base.css
+++ b/packages/styles/src/base.css
@@ -95,6 +95,10 @@
     @apply text-sm text-text-muted;
   }
 
+  :where(.fui-card__content) {
+    @apply space-y-2;
+  }
+
   :where(.fui-form) {
     @apply space-y-6;
   }
@@ -153,7 +157,7 @@
   }
 
   :where(.fui-divider__text) {
-    @apply text-text-muted text-xs;
+    @apply text-text-muted text-xs my-2;
   }
 
   :where(.fui-phone-input) {
@@ -189,11 +193,11 @@
   }
 
   .fui-provider__button[data-provider="google.com"][data-themed="true"] {
-    --google-primary: #FFFFFF;
+    --google-primary: #131314;
     --color-primary: var(--google-primary);
     --color-primary-hover: --alpha(var(--google-primary) / 85%);
-    --color-primary-surface: #1F1F1F;
-    --color-border: #747775;
+    --color-primary-surface: #FFFFFF;
+    --color-border: var(--google-primary);
   }
 
   .fui-provider__button[data-provider="google.com"][data-themed="neutral"] {
@@ -206,9 +210,11 @@
 
   @variant dark {
     .fui-provider__button[data-provider="google.com"][data-themed="true"] {
-      --google-primary: #131314;
-      --color-primary-surface: #E3E3E3;
-      --color-border: #8E918F;
+      --google-primary: #FFFFFF;
+      --color-primary: var(--google-primary);
+      --color-primary-hover: --alpha(var(--google-primary) / 85%);
+      --color-primary-surface: #1F1F1F;
+      --color-border: #747775;
     }
   }
 
@@ -221,66 +227,64 @@
   }
 
   .fui-provider__button[data-provider="apple.com"][data-themed="true"] {
-    --apple-primary: var(--color-white);
+    --apple-primary: #000000;
     --color-primary: var(--apple-primary);
     --color-primary-hover: --alpha(var(--apple-primary) / 85%);
-    --color-primary-surface: var(--color-black);
-    --color-border: var(--color-black);
+    --color-primary-surface: #FFFFFF;
+    --color-border: var(--apple-primary);
   }
 
   @variant dark {
     .fui-provider__button[data-provider="apple.com"][data-themed="true"] {
-      --apple-primary: var(--color-black);
-      --color-primary-surface: var(--color-white);
+      --apple-primary: var(--color-white);
+      --color-primary: var(--apple-primary);
+      --color-primary-hover: --alpha(var(--apple-primary) / 85%);
+      --color-primary-surface: var(--color-black);
       --color-border: var(--color-white);
     }
   }
 
   .fui-provider__button[data-provider="github.com"][data-themed="true"] {
-    --github-primary: var(--color-white);
+    --github-primary: #000000;
     --color-primary: var(--github-primary);
     --color-primary-hover: --alpha(var(--github-primary) / 85%);
-    --color-primary-surface: var(--color-black);
-    --color-border: var(--color-black);
+    --color-primary-surface: #FFFFFF;
+    --color-border: var(--github-primary);
   }
 
   @variant dark {
     .fui-provider__button[data-provider="github.com"][data-themed="true"] {
-      --github-primary: var(--color-black);
-      --color-primary-surface: var(--color-white);
+      --github-primary: var(--color-white);
+      --color-primary: var(--github-primary);
+      --color-primary-hover: --alpha(var(--github-primary) / 85%);
+      --color-primary-surface: var(--color-black);
       --color-border: var(--color-white);
     }
   }
 
   .fui-provider__button[data-provider="microsoft.com"][data-themed="true"] {
-    --microsoft-primary: var(--color-white);
+    --microsoft-primary: #2F2F2F;
     --color-primary: var(--microsoft-primary);
     --color-primary-hover: --alpha(var(--microsoft-primary) / 85%);
-    --color-primary-surface: #5E5E5E;
-    --color-border: var(--color-black);
+    --color-primary-surface: #FFFFFF;
+    --color-border: var(--microsoft-primary);
   }
 
   @variant dark {
     .fui-provider__button[data-provider="microsoft.com"][data-themed="true"] {
-      --microsoft-primary: #2F2F2F;
-      --color-primary-surface: var(--color-white);
+      --microsoft-primary: var(--color-white);
+      --color-primary: var(--microsoft-primary);
+      --color-primary-hover: --alpha(var(--microsoft-primary) / 85%);
+      --color-primary-surface: #5E5E5E;
       --color-border: var(--color-white);
     }
   }
   
   .fui-provider__button[data-provider="twitter.com"][data-themed="true"] {
-    --twitter-primary: var(--color-white);
+    --twitter-primary: #1DA1F2;
     --color-primary: var(--twitter-primary);
     --color-primary-hover: --alpha(var(--twitter-primary) / 85%);
-    --color-primary-surface: var(--color-black);
-    --color-border: var(--color-black);
-  }
-
-  @variant dark {
-    .fui-provider__button[data-provider="twitter.com"][data-themed="true"] {
-      --twitter-primary: var(--color-black);
-      --color-primary-surface: var(--color-white);
-      --color-border: var(--color-white);
-    }
+    --color-primary-surface: #FFFFFF;
+    --color-border: var(--twitter-primary);
   }
 }
