chore(*): updated depenencies, styles dist and added npm publish scripts

--- a/examples/nextjs/app/globals.css
+++ b/examples/nextjs/app/globals.css
@@ -15,7 +15,7 @@
  */
 
 @import "tailwindcss";
-@import "@firebase-ui/styles/src/base.css";
+@import "@invertase/firebaseui-styles/tailwind";
 
-/* @import "@firebase-ui/styles/src/themes/dark.css"; */
-/* @import "@firebase-ui/styles/src/themes/brutalist.css"; */
+/* @import "@invertase/firebaseui-styles/themes/dark.css"; */
+/* @import "@invertase/firebaseui-styles/themes/brutalist.css"; */
