--- a/packages/styles/src/base.css
+++ b/packages/styles/src/base.css
@@ -38,26 +38,25 @@
     --fui-radius: var(--radius-sm);
     /* The radius used for the cards */
     --fui-radius-card: var(--radius-xl);
-  }
 
-  /* Apply dark mode styles when the dark variant is applied */
-  /* See https://tailwindcss.com/docs/dark-mode */
-  @variant dark {
-    :root {
+    /* Apply dark mode styles when the dark variant is applied */
+    /* See https://tailwindcss.com/docs/dark-mode */
+    @variant dark {
       --fui-primary: var(--color-white);
       --fui-primary-hover: --alpha(var(--fui-primary) / 85%);
       --fui-primary-surface: var(--color-black);
       --fui-text: var(--color-white);
-      --fui-text-muted: var(--color-gray-200);
-      --fui-background: var(--color-black);
-      --fui-border: var(--color-gray-200);
-      --fui-input: var(--color-gray-300);
-      --fui-error: var(--color-red-500);
+      --fui-text-muted: var(--color-neutral-300);
+      --fui-background: var(--color-neutral-950);
+      --fui-border: var(--color-neutral-800);
+      --fui-input: var(--color-neutral-700);
+      --fui-error: var(--color-red-700);
       --fui-radius: var(--radius-sm);
       --fui-radius-card: var(--radius-xl);
     }
   }
 }
+
 
 @theme {
   --color-primary: var(--fui-primary);
@@ -76,7 +75,7 @@
 @layer components {
   /* Using :where() to reduce CSS specificity - allows users to easily override with their own Tailwind classes */
   :where(.fui-screen) {
-    @apply pt-24 max-w-md mx-auto;
+    @apply max-w-sm mx-auto;
   }
 
   :where(.fui-screen .fui-screen__children) {
