fix(react): Add descriptiont to SMS MFA verification

--- a/packages/styles/src/base.css
+++ b/packages/styles/src/base.css
@@ -120,6 +120,10 @@
     @apply grow;
   }
 
+  :where(.fui-form fieldset label div[data-input-description]) {
+    @apply text-xs text-text-muted;
+  }
+
   :where(.fui-form .fui-form__action) {
     @apply px-1 hover:underline text-xs text-text-muted;
   }
