feat(react): Add TOTP description improve layout

--- a/packages/styles/src/base.css
+++ b/packages/styles/src/base.css
@@ -84,7 +84,6 @@
 
   :where(.fui-content) {
     @apply space-y-2;
-    
   }
 
   :where(.fui-card) {
@@ -138,6 +137,10 @@
 
   :where(.fui-form fieldset label div[data-input-group]) {
     @apply flex items-center gap-2;
+  }
+
+  :where(.fui-form .fui-qr-code-container) {
+    @apply flex flex-col items-center gap-4 text-text-muted text-xs;
   }
 
   :where(.fui-error) {
