--- a/examples/angular/src/app/app.component.html
+++ b/examples/angular/src/app/app.component.html
@@ -14,6 +14,6 @@
  limitations under the License.
 -->
 
-<div class="app-container">
-  <router-outlet />
-</div>
+<app-theme-toggle />
+<app-pirate-toggle />
+<router-outlet />
