--- a/packages/styles/src/base.css
+++ b/packages/styles/src/base.css
@@ -323,11 +323,19 @@
     --color-border: var(--twitter-primary);
   }
 
+  .fui-provider__button[data-provider="yahoo.com"] svg {
+    color: #5F01D1;
+  }
+
   .fui-provider__button[data-provider="yahoo.com"][data-themed="true"] {
     --yahoo-primary: #5F01D1;
     --color-primary: var(--yahoo-primary);
     --color-primary-hover: --alpha(var(--yahoo-primary) / 85%);
     --color-primary-surface: #FFFFFF;
     --color-border: var(--yahoo-primary);
+  }
+
+  .fui-provider__button[data-provider="yahoo.com"][data-themed="true"] svg {
+    color: var(--color-primary-surface);
   }
 }
