--- a/examples/shadcn/src/index.css
+++ b/examples/shadcn/src/index.css
@@ -160,6 +160,17 @@
     --primary: var(--line-primary);
     --primary-foreground: var(--color-white);
   }
+  button[data-provider='yahoo.com'][data-themed='true'] {
+    --yahoo-primary: #5F01D1;
+    --primary: var(--yahoo-primary);
+    --primary-foreground: var(--color-white);
+  }
+  button[data-provider='yahoo.com'] svg {
+    color: #5F01D1;
+  }
+  button[data-provider='yahoo.com'][data-themed='true'] svg {
+    color: var(--primary-foreground);
+  }
 
 }
 
