chore: manual override for yahoo button

--- a/packages/styles/src/base.css
+++ b/packages/styles/src/base.css
@@ -167,6 +167,14 @@
     @apply w-5 h-5;
   }
 
+  :where(.fui-provider__button[data-provider="yahoo.com"] .fui-provider__icon) {
+    color: #5F01D1;
+  }
+
+  :where(.fui-provider__button[data-provider="yahoo.com"][data-themed="true"] .fui-provider__icon) {
+    color: var(--color-primary-surface);
+  }
+
   :where(.fui-divider) {
     @apply flex items-center gap-3 my-4;
   }
